License added for files missing one.
The non-C files were mostly lacking a license! Now they all have one.

I also wrote a separate script to bring in all the configuration files
into a `.astrutils` directory for all the tests once instead of
checking (and bringing them) in each test.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 The authors that have contributed to each package are listed after the
 name of the package:
 
-ImageCrop(astrimgcrop): Mohammad Akhlaghi
+ImageCrop (astrimgcrop): Mohammad Akhlaghi
+MakeProfiles (astrmkprof): Mohammad Akhlaghi
