--- a/doc/formath.texi
+++ b/doc/formath.texi
@@ -11,6 +11,11 @@ has a line of its own.
 For the other formats, everything is normal, except the display math
 equations that don't have any proper solution, so I have just put a $$
 $$ around the math.
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
 @end ignore
 
 @c HTML:
