--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-AstrUtils NEWS                                    -*- outline -*-
+GNU Astronomy Utilities NEWS                        -*- outline -*-
 
 * Noteworthy changes in release 0.1 (2014-12-28) [stable]
 
